# veri-core

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  flake.nix  sema-core-field-seed.cozo  sema-core-init.cozo  sema-core-seed.cozo
core/: body.aski  expr.aski  pattern.aski  program.aski  root.aski  statement.aski  trait.aski  type.aski
flake-crates/: aski-core
source/: program.core
src/: lib.rs
